--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "npx nodemon",
     "lint": "eslint . --ext .ts --fix",
     "pre-commit": "npx lint-staged",
+    "commit": "cz",
     "build": "npm run lint; npx tsc",
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,6 +21,8 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.32.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
