--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
             "single"
         ],
         "semi": [
-            "error",
+            "warn",
             "never"
         ],
         "no-console": [
