--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "dev": "npx nodemon",
     "lint": "eslint . --ext .ts --fix",
     "pre-commit": "npx lint-staged",
-    "commit": "cz",
+    "commit": "git commit",
     "build": "npm run lint; npx tsc",
-    "start": "node dist/index.js",
+    "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "alcalcides",
