--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "prettier": "^2.8.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@aws-sdk/client-lambda": "^3.258.0",
+    "dotenv": "^16.0.3"
   }
 }
